--- a/CS113-week 2/pizza-2.13-start/index.html
+++ b/CS113-week 2/pizza-2.13-start/index.html
@@ -18,28 +18,28 @@
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£12.99</p>
-                <button onClick="orderPizza('Margarita')">Order</button>
+                <button>Order</button>
             </div>
             <div style="width:20%; display: inline-block; margin: auto;">
                 <h3>Pepperoni</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£14.99</p>
-                <button onClick="orderPizza('Pepperoni')">Order</button>
+                <button>Order</button>
             </div>
             <div style="width:20%; display: inline-block; margin: auto;">
                 <h3>Ham and Pineapple</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£13.99</p>
-                <button onClick="orderPizza('Ham and Pineapple')">Order</button>
+                <button>Order</button>
             </div>
             <div style="width:20%; display: inline-block; margin: auto;">
                 <h3>Vegetarian</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£9.99</p>
-                <button onClick="orderPizza('Veggie')">Order</button>
+                <button>Order</button>
             </div>
         </div>
         <br>
@@ -48,10 +48,5 @@
             <a href="customise.html">make my own</a>
         </div>
     </div>
-    <script>
-        function orderPizza(p) {
-            alert(p + " pizza has been ordered!");
-        }
-    </script>
 </body>
 </html>
