--- a/CS113-week 2/pizza-2.15-start/customise.html
+++ b/CS113-week 2/pizza-2.15-start/customise.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strathclyde Pizza Place - Customise</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
