--- a/CS113-week 2/pizza-2.15-start/index.html
+++ b/CS113-week 2/pizza-2.15-start/index.html
@@ -4,43 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strathclyde Pizza Place</title>
+    <!--https://fonts.google.com/?selection.family=Anton-->
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <div id="main">
         <div class="center">
             <h1>Strathclyde Pizza Place</h1>
             <h2>Menu</h2>
         </div>
         <hr>
-        <div class="w-70 ma center">
+        <div class="center w-70 ma">
             <div class="w-20 quick-order">
                 <h3>Cheese and Tomato</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <span><p class="price">£12.99</p></span>
-                <button onClick="orderPizza('margarita')">Order</button>
+                <p class="price">£12.99</p>
+                <button>Order</button>
             </div>
             <div class="w-20 quick-order">
                 <h3>Pepperoni</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p class="price">£14.99</p>
-                <button onClick="orderPizza('pepperoni')">Order</button>
+                <button>Order</button>
             </div>
             <div class="w-20 quick-order">
                 <h3>Ham and Pineapple</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p class="price">£13.99</p>
-                <button onClick="orderPizza('hamandpineapple')">Order</button>
+                <button>Order</button>
             </div>
             <div class="w-20 quick-order">
                 <h3>Vegetarian</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p class="price">£9.99</p>
-                <button onClick="orderPizza('veggie')">Order</button>
+                <button>Order</button>
             </div>
         </div>
         <br>
@@ -49,11 +51,12 @@
             <a id="customise" href="customise.html">make my own</a>
         </div>
     </div>
-    <p>test</p>
     <script>
-        function orderPizza(pizza) {
-            alert(pizza + " has been ordered!");
-        }
+        var elementByIdExample = document.getElementById("customise");
+        console.log('elementByIdExample', elementByIdExample)
+
+        var elementsByClassNameExample = document.getElementsByClassName("price");
+        console.log('elementsByClassNameExample', elementsByClassNameExample)
     </script>
 </body>
 </html>
