--- a/CS113-week 2/pizza-2.15-end/index.html
+++ b/CS113-week 2/pizza-2.15-end/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strathclyde Pizza Place</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
@@ -14,34 +15,30 @@
         </div>
         <hr>
         <div class="center w-70 ma">
-            <div class="w-20 quick-order">
+            <button class="quick-order" onClick="orderPizza('margarita')">
                 <h3>Cheese and Tomato</h3>
-                <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
+                <img src="margarita.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <p class="price">£12.99</p>
-                <button>Order</button>
-            </div>
-            <div class="w-20 quick-order">
+                <p class="price"><b>£12.99</b></p>
+            </button>
+            <button class="quick-order" onClick="orderPizza('pepperoni')">
                 <h3>Pepperoni</h3>
-                <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
+                <img src="pepperoni.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <p class="price">£14.99</p>
-                <button>Order</button>
-            </div>
-            <div class="w-20 quick-order">
+                <p class="price"><b>£14.99</b></p>
+            </button>
+            <button class="quick-order" onClick="orderPizza('hamandpineapple')">
                 <h3>Ham and Pineapple</h3>
-                <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
+                <img src="hamandpineapple.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <p class="price">£13.99</p>
-                <button>Order</button>
-            </div>
-            <div class="w-20 quick-order">
+                <p class="price"><b>£13.99</b></p>
+            </button>
+            <button class="quick-order" onClick="orderPizza('veggie')">
                 <h3>Vegetarian</h3>
-                <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
+                <img src="veggie.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <p class="price">£9.99</p>
-                <button>Order</button>
-            </div>
+                <p class="price"><b>£9.99</b></p>
+            </button>
         </div>
         <br>
         <hr>
@@ -50,6 +47,10 @@
         </div>
     </div>
     <script>
+        function orderPizza(p) {
+            console.log(p + " pizza ordered!");
+        }
+
         var elementByIdExample = document.getElementById("customise");
         console.log('elementByIdExample', elementByIdExample)
 
