--- a/CS113-week 1/pizza-1.13-start/index.html
+++ b/CS113-week 1/pizza-1.13-start/index.html
@@ -6,34 +6,34 @@
 </head>
 <body>
     <div>
-        <div style="text-align: center;">
+        <div>
             <h1>Strathclyde Pizza Place</h1>
             <h2>Menu</h2>
         </div>
         <hr>
-        <div style="margin: auto; width: 70%; text-align: center;">
-            <div style="width: 20%; display: inline-block; margin: auto;">
+        <div>
+            <div>
                 <h3>Cheese and Tomato</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£12.99</p>
                 <button onClick="orderPizza()">Order</button>
             </div>
-            <div style="width: 20%; display: inline-block; margin: auto;">
+            <div>
                 <h3>Pepperoni</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£14.99</p>
                 <button>Order</button>
             </div>
-            <div style="width: 20%; display: inline-block; margin: auto;">
+            <div>
                 <h3>Ham and Pineapple</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
                 <p>£13.99</p>
                 <button>Order</button>
             </div>
-            <div style="width: 20%; display: inline-block; margin: auto;">
+            <div>
                 <h3>Vegetarian</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
@@ -43,14 +43,9 @@
         </div>
         <br>
         <hr>
-        <div style="text-align: center;">
+        <div>
             <a href="customise.html">make my own</a>
         </div>
     </div>
-    <script>
-        function orderPizza() {
-            alert("Pizza Ordered!");
-        }
-    </script>
 </body>
 </html>
