--- a/CS113-week 2/pizza-2.13-start/index.html
+++ b/CS113-week 2/pizza-2.13-start/index.html
@@ -18,7 +18,7 @@
                 <h3>Cheese and Tomato</h3>
                 <img src="placeholder.jpg" alt="some pizza" width="100" height="100"/>
                 <p>13.5''</p>
-                <span><p class="price">£12.99</p></span>
+                <p class="price">£12.99</p>
                 <button onClick="orderPizza('margarita')">Order</button>
             </div>
             <div class="w-20 quick-order">
