--- a/CS113-week 2/pizza-2.4-start/delivery.html
+++ b/CS113-week 2/pizza-2.4-start/delivery.html
@@ -13,8 +13,12 @@
         </div>
         <hr>
         <div>
-            <form action="deliveryinfo.php" method="post">
+            <form>
                 <h3>Your details:</h3>
+				<div>
+                    <label for="studentnumber">Student number:</label>
+                    <input type="text" name="studentno" id="studentnumber" placeholder="1122132">
+                </div>
                 <div>
                     <label for="firstname">First name:</label>
                     <input type="text" name="fname" id="firstname" placeholder="John">
